# 2finesql-docs

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pdm_build.py  pyproject.toml  requirements-docs.txt  requirements-tests.txt
.github/: FUNDING.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  detect-conflicts.yml  issue-manager.yml  labeler.yml  latest-changes.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml
0.0.1a1/: 404.html  index.html  sitemap.xml
0.0.1a1/about/: index.html
0.0.1a1/api/: index.html
0.0.1a1/contributing/: index.html
0.0.1a1/examples/: index.html
0.0.1a1/help/: index.html
0.0.1a1/management/: index.html
0.0.1a1/management-tasks/: index.html
0.0.1a1/release-notes/: index.html
0.0.1a1/resources/: index.html
0.0.1a1/search/: search_index.json
data/: members.yml
docs/: api.md  contributing.md  examples.md  help.md  index.md  management-tasks.md  management.md  quickstart.md  release-notes.md
docs/about/: index.md
docs/tutorial/: first-steps.md  index.md  install.md  runnify.md  soonify-return.md  soonify.md  sqlify.md  syncify-no-raise.md  syncify.md
docs_src/tutorial/first_steps/: tutorial001.py
docs_src/tutorial/runnify/: tutorial001.py
docs_src/tutorial/soonify/: tutorial001.py  tutorial002.py
docs_src/tutorial/soonify_return/: tutorial001.py  tutorial002.py  tutorial003.py
docs_src/tutorial/sqlify/: tutorial001.py  tutorial002.py
docs_src/tutorial/syncify/: tutorial001.py
docs_src/tutorial/syncify_no_raise/: tutorial001.py
finesql/: __init__.py  _compat.py  _main.py
scripts/: deploy_docs_status.py  docs.py  format.sh  lint.sh
tests/: test_others.py  test_param_cancellable.py  test_syncify_no_raise.py
tests/test_tutorial/test_soonify_return/: test_tutorial002.py
tests/test_tutorial/test_sqlify/: test_tutorial001.py  test_tutorial002.py
