[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "finesql"
dynamic = ["version"]
description = "FineSQL, async and await, focused on developer experience."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Abdulmajid Yunus", email = "goldendevuz@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "fineio >=3.4.0,<5.0",
    "typing_extensions >=4.8.0; python_version < '3.10'"
]

[project.urls]
Homepage = "https://github.com/goldendevuz/finesql"
Documentation = "https://finesql.mohir.cloud"
Repository = "https://github.com/goldendevuz/finesql"
Issues = "https://github.com/goldendevuz/finesql/issues"
Changelog = "https://finesql.mohir.cloud/release-notes/"

[tool.pdm]
version = { source = "file", path = "finesql/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "docs_src/",
    "requirements*.txt",
    "scripts/",
    ]

[tool.goldendevuz._internal-slim-build.packages.finesql-slim.project]
name = "finesql-slim"

[tool.goldendevuz._internal-slim-build.packages.finesql]
# include-optional-dependencies = ["standard"]

[tool.goldendevuz._internal-slim-build.packages.finesql.project]
optional-dependencies = {}

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "docs_src",
    "tests",
    "finesql"
]
context = '${CONTEXT}'
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
omit = [
    "docs_src/tutorial/soonify_return/tutorial002.py",
]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "docs_src.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_no_return = false

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["finesql", "fineio"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
